# c2526-R3

./: .gitignore  Prueba  README.md  d  main.py  pyproject.toml  resumen_incendios.parquet
src/: analisis.ipynb  limpieza.ipynb  main.py
src/analisis/: analisis.ipynb
src/extraccion/: construccion_df.py  filtros_no_sinteticos.py  fisicas.py  incendios.py  intensidad.py  mascaras.py  minioFunctions.py  parquet.py  pendiente.py  puntos_sinteticos.py  suelo.py  vegetacion.py  vegetacion2.py
src/extraccion/descartadas/: suelo.py  vegetacion2.py
