[project]
name = "c2526-r3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ee>=0.2",
    "geemap>=0.37.1",
    "geo>=1.0.1",
    "geodatasets>=2026.1.0",
    "geopandas>=1.1.2",
    "minio>=7.2.20",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "path>=17.1.1",
    "pathlib>=1.0.1",
    "pyarrow>=23.0.0",
    "pyproj>=3.7.2",
    "python-dotenv>=1.2.1",
    "rasterio>=1.5.0",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "timedelta>=2020.12.3",
]
